--- a/package.json
+++ b/package.json
@@ -30,6 +30,6 @@
     "@types/styled-jsx": "^2.2.8",
     "dotenv": "^8.2.0",
     "prettier": "^2.0.4",
-    "typescript": "^3.9.0-beta"
+    "typescript": "^4.2.3"
   }
 }
