--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "@material-ui/icons": "^4.11.2",
     "immer": "^8.0.1",
     "next": "^10.0.8",
-    "p-queue": "^6.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "sharp": "^0.27.2",
     "swr": "^0.4.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.32",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.1",
+    "@types/sharp": "^0",
     "@types/styled-jsx": "^2.2.8",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
