--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "@types/styled-jsx": "^2.2.8",
     "prettier": "^2.2.1",
     "typescript": "^4.2.3"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
